--- a/happyBirthday/index.html
+++ b/happyBirthday/index.html
@@ -80,21 +80,21 @@
   <div id="app" style=" height: 4145px;">
         <div class="head" onclick="cl()"><h1>祝俺妈生日快乐~~~ (点我放音乐(ﾉ´▽｀)ﾉ♪)</h1></div>
         <div class="main">
-            <div class="main-pic" style="background-image: url('img/m1.jpg');">
+            <div class="main-pic" style="background-image: url('https://wzs63.github.io/happyBirthday/img/m1.jpg');">
                 <!-- <a href="" class="pf-icon image-popup"><span class="icon_plus"></span></a> -->
              </div>
              <div class="main-txt">
                  <p>大树和小花ヾ(✿ﾟ▽ﾟ)ノ~</p>
              </div>
 
-             <div class="main-pic" style="background-image: url('img/m2.jpg');">
+             <div class="main-pic" style="background-image: url('https://wzs63.github.io/happyBirthday/img/m2.jpg');">
                 <!-- <a href="" class="pf-icon image-popup"><span class="icon_plus"></span></a> -->
              </div>
              <div class="main-txt">
                  <p>云顶行走ヽ(ﾟ▽ﾟ*) ﾉ~</p>
              </div>
 
-             <div class="main-pic" style="background-image: url('img/m3.jpg');">
+             <div class="main-pic" style="background-image: url('https://wzs63.github.io/happyBirthday/img/m3.jpg');">
                 <!-- <a href="" class="pf-icon image-popup"><span class="icon_plus"></span></a> -->
 
              </div>
@@ -117,7 +117,7 @@
   </div>
 
   <audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-                  src="music\guitar.mp3">
+                  src="https://wzs63.github.io/happyBirthday/music/guitar.mp3">
   </audio>
 </body>
 
