--- a/happyBirthday/index.html
+++ b/happyBirthday/index.html
@@ -80,7 +80,7 @@
   <div id="app" style=" height: 4145px;">
         <div class="head" onclick="cl()"><h1>祝俺妈生日快乐~~~ (点我放音乐(ﾉ´▽｀)ﾉ♪)</h1></div>
         <div class="main">
-            <div class="main-pic" style="background-image: url('img/mm.jpg');">
+            <div class="main-pic" style="background-image: url('img/mm1.jpg');">
                 <!-- <a href="" class="pf-icon image-popup"><span class="icon_plus"></span></a> -->
              </div>
              <div class="main-txt">
